compiler/tools/fpp-check/test/struct/invalid_size.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/struct/invalid_size.fpp: 1.16
struct S { x: [-1] U32 }
               ^
error: invalid array size -1
